fixed support for video on mobile devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -74,6 +74,8 @@ main .title p {
   border: none;
   font-size: 20px;
   margin-top: 5%;
+  color: var(black);
+  font-weight: 600;
 }
 
 .subtitle {
@@ -271,12 +273,20 @@ footer .credits {
     display: none;
   }
 
+  header nav {
+    padding: 5%;
+  }
+
+  .menu {
+    display: none;
+  }
+
   .vid {
     display: block;
     object-fit: fill;
     opacity: 100%;
   }
-  /*
+
   .vid::before {
     position: absolute;
     top: 0;
@@ -285,8 +295,8 @@ footer .credits {
     left: 0;
     content: "";
 
-    background-color: rgba(0, 0, 0, 0.315);
-  } */
+    background-color: rgba(0, 0, 0, 0.739);
+  }
 
   #myvid {
     width: 100vw;
@@ -296,22 +306,20 @@ footer .credits {
 
   .title {
     width: 100%;
+    height: 45vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-top: -30%;
+    justify-content: end;
   }
   main .title {
     top: 45%;
-    font-size: 1.2em;
+    font-size: 1.5em;
   }
   main .title p {
     padding-bottom: 3%;
   }
-  .title button {
-    margin-top: 10%;
-  }
+
   .subtitle {
     margin-top: 500%;
   }
